Fixed button text clipping and text breaking in the middle of a word in some locales.

--- a/apps/browser/src/popup/scss/box.scss
+++ b/apps/browser/src/popup/scss/box.scss
@@ -367,6 +367,7 @@
       display: block;
       width: initial;
       margin-bottom: 0;
+      word-break: normal;
 
       @include themify($themes) {
         color: themed("textColor");
