--- a/apps/browser/src/popup/scss/buttons.scss
+++ b/apps/browser/src/popup/scss/buttons.scss
@@ -98,4 +98,5 @@ button {
   border: none;
   background: transparent;
   color: inherit;
+  white-space: normal;
 }
